dev/openclaw/openclaw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclaw-ingress
  namespace: openclaw
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: openclaw.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-service
                port:
                  number: 4180
          - path: /hooks
            pathType: Prefix
            backend:
              service:
                name: openclaw
                port:
                  number: 18789
    - host: hooks-openclaw.soludev.tech
      http:
        paths:
          - path: /hooks
            pathType: Prefix
            backend:
              service:
                name: openclaw
                port:
                  number: 18789
